# scrapescore

./: .gitignore  LICENSE  README.md  config.yaml  env-template  pyproject.toml  setup_systemd
src/jobspy/: README.md  __init__.py  exception.py  model.py  site_configuration_extractor.py  util.py
src/jobspy/eightfold/: __init__.py
src/jobspy/glassdoor/: __init__.py
src/jobspy/google/: __init__.py
src/jobspy/indeed/: __init__.py
src/jobspy/lib/: downloader.py
src/jobspy/linkedin/: __init__.py  util.py
src/jobspy/marriott/: __init__.py
src/jobspy/oraclecloud/: __init__.py
src/jobspy/tests/: test_site_configuration_extractor.py
src/jobspy/usajobs/: __init__.py
src/jobspy/workday/: __init__.py
src/jobspy/ziprecruiter/: __init__.py
src/scrapescore/: analytics.py  app.py  applied.py  common.py  configs.py  db.py  db_setup.py  profiles.py  saved.py  score.py  search.py
src/scrapescore/batch/: cleanup.py  job_finder.py
src/scrapescore/lib/: config.py  downloader.py  gemini_ai_runner.py  gemini_client.py  models.py  systemd_notifier.py  title_score_cache.py  utils.py
src/scrapescore/resources/: gemini_ats_score_template.md  hr_agents.yaml  (+7 more)
systemd/: job_finder.service  job_finder.timer  scrapescore_ui.service
tests/: manual_scraper.py  test_indeed_download.py  test_linkedin_download.py  test_llm_usage_logging.py  test_llm_usage_summary.py  test_oraclecloud_scraper.py  test_title_score_cache.py  test_workday_download.py
tests/job_score_v3/: session_helper.py  test_create_profile.py  test_nav.py  test_score_button.py  verify_jira_100.py
